--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
       "name": "fun-age-app-clone",
       "version": "0.1.0",
       "private": true,
+      "type": "module",
       "dependencies": {
             "@google/generative-ai": "^0.24.1",
             "@radix-ui/react-accordion": "^1.2.3",
@@ -54,12 +55,13 @@
             "@types/node": "^20.10.0",
             "@types/react": "^19.2.7",
             "@types/react-dom": "^19.2.3",
+            "@vitejs/plugin-react": "^5.1.2",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "autoprefixer": "^10.4.22",
             "postcss": "^8.5.6",
             "tailwindcss": "^4.1.17",
             "typescript": "^5.9.3",
-            "vite": "6.3.5"
+            "vite": "^5.4.11"
       },
       "scripts": {
             "dev": "vite",
