--- a/package.json
+++ b/package.json
@@ -52,14 +52,13 @@
             "vaul": "^1.1.2"
       },
       "devDependencies": {
-            "@tailwindcss/postcss": "^4.1.17",
+            "@tailwindcss/cli": "^4.1.18",
+            "@tailwindcss/vite": "^4.1.18",
             "@types/node": "^20.10.0",
             "@types/react": "^19.2.7",
             "@types/react-dom": "^19.2.3",
             "@vitejs/plugin-react": "^5.1.2",
             "@vitejs/plugin-react-swc": "^3.10.2",
-            "autoprefixer": "^10.4.22",
-            "postcss": "^8.5.6",
             "tailwindcss": "^4.1.17",
             "typescript": "^5.9.3",
             "vite": "^5.4.11"
