--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
       "type": "module",
       "dependencies": {
             "@google/generative-ai": "^0.24.1",
+            "@openrouter/sdk": "^0.2.11",
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
             "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -40,6 +41,7 @@
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
+            "openai": "^6.10.0",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
