--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
             "@radix-ui/react-tooltip": "^1.1.8",
             "@supabase/supabase-js": "^2.87.1",
             "class-variance-authority": "^0.7.1",
-            "clsx": "*",
+            "clsx": "^2.1.1",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
             "firebase": "^12.6.0",
+            "framer-motion": "^12.23.26",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
@@ -50,7 +51,7 @@
             "react-router-dom": "^7.9.6",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
-            "tailwind-merge": "*",
+            "tailwind-merge": "^3.4.0",
             "vaul": "^1.1.2"
       },
       "devDependencies": {
