--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
             "@vitejs/plugin-react-swc": "^3.10.2",
             "tailwindcss": "^4.1.17",
             "typescript": "^5.9.3",
-            "vite": "^5.4.11"
+            "vite": "^5.4.11",
+            "vite-plugin-pwa": "^1.2.0"
       },
       "scripts": {
             "dev": "vite",
