--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
         "noUnusedParameters": false,
         "noFallthroughCasesInSwitch": true,
         "types": [
-            "vite/client"
+            "vite/client",
+            "vite-plugin-pwa/client"
         ]
     },
     "include": [
